# haskellwebapp2

./: #*scratch*#  #install.sh#  *scratch*  *shell*  .#install.sh  .gitignore  42335  438752  704537  770506  872328try.html  91228  965121  README.html~  README.md  TAGS  Untitled.ipynb  Untitled3.ipynb  `o`o`o  c.html  compileCode.html  config.txt  config_prod.txt  cssButton.html  d.html  dump.rdb  fetchjson.html  genepdf.html  haskellwebapp2.cabal  haskellwebapp2.ipynb  help.html  helpTemp.html  helpTemp.html~  hpush.sh  imgui.ini  index.html  indexAron.html  indexEditor.html  indexEditorACE.html  indexEditorACE.html_old  (+600 more)
.stack-work/: stack.sqlite3
.stack-work/ghci/0d0634ce/: cabal_macros.h
.stack-work/ghci/438f0fbf/: cabal_macros.h
.stack-work/ghci/45e3dd47/: cabal_macros.h
.stack-work/ghci/e43e9adc/: cabal_macros.h
.stack-work/ghci/eb976d7f/: cabal_macros.h
.stack-work/intero/: intero66mH40-TEMP.hs  intero8AACLH-TEMP.hs  interokqCEVP-TEMP.hs  interom5jFLa-TEMP.hs  interonGUWMb-TEMP.hs  interopLLPJl-TEMP.hs
.stack-work/odir/: AronHtml.hi  AronModule.hi  GenePDFHtmlLib.hi  Main.hi  PortableLines.hi  WaiConstant.hi  WaiLib.hi
pdf/: triangle_split
src/: #WaiLib.hs#  .#Main.hs  .#WaiLib.hs  .#htmlBody.htmlbs  .#myscript.js  .WaiLib.hs.~undo-tree~  .emacs.desktop  .gitignore  AronAlias.hs  AronCommon.hs  AronDevLib.hs  AronFFI.hs  AronGraphic.hs  AronHtml.dyn_hi  AronHtml.dyn_o  AronHtml.hi  AronHtml.hs  AronHtml2.hs  AronHtml_tmp.hs  AronModule.dyn_hi  AronModule.dyn_o  AronModule.hi  AronModule.hs  AronModule_old.hs  AronModule_tmp.hs  AronOpenGL.hs  AronOpenGL_old.hs  AronPoly.hs  AronSimple.hs  AronSymbolicAlgebra.hs  AronTodoLib.hs  AronToken.hs  AronUnicodeOp.hs  GenePDFHtmlLib.dyn_hi  GenePDFHtmlLib.dyn_o  GenePDFHtmlLib.hi  GenePDFHtmlLib.hs  GenePDFHtmlLib_tmp.hs  HtmlForm.hs  Main  (+40 more)
src/css/: 783793  dump.rdb  leftRightDiv.css  modifycolor.css  mystyle.css  mystyleKK.css  style.css  svgbutton.css
src/datadir/latex/indexEditorACE/: .#indexEditorACE.html  indexEditorACE.html  indexEditorACE.json  (+1 more)
src/js/: #aronlib.js#  .aronlib.js.~undo-tree~  aronlib.js  aronlib_tmp.js  myscript.js
(+352 files in other folders)
