name:                haskellwebapp2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/myproject#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellwebapp2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       regex-compat,
                       unix,
                       text,
                       time,
                       split,
                       directory,
                       filepath,
                       process,
                       random,
                       bytestring,
                       containers,
                       regex-tdfa,
                       unordered-containers,
                       vector,
                       array,
                       pretty-simple,
                       regex-posix,
                       regex-base,
                       utf8-string,
                       raw-strings-qq,
                       sqlite-simple,
                       wai,
                       aeson,
                       network-uri,
                       http-types,
                       warp,
                       turtle,
                       websockets,
                       wai-websockets,
                       wai-predicates,
                       regex,
                       wai-extra,
                       blaze-builder,
                       safe,
                       wai-util,
                       wai-session,
                       http-conduit,
                       word8,
                       email-validate,
                       data-default,
                       neat-interpolation

